# QT-QML

./: Readme.md
AddBasketBallImageToLabel/: CMakeLists.txt  mainwindow.h
AjendaSaveNameAndPhoneLocalStorageQMl/: CMakeLists.txt
DisplayListOfBirdsImageFromInternet/: main.qml
DrawPaintWithHand/: main.qml
ESGReciverOpenGL1/: CMakeLists.txt  graphicgl.h
ESGreciever/: filerecievergraphic.cpp  main.qml
ESGreciverOpenGL/: ESGreciverOpenGL.pro
ESGsender/: CMakeLists.txt  filerecievergraphic.cpp  filerecievergraphic.h  filesend.cpp  filesend.h  main.qml  serialgraphic.cpp  serialgraphic.h
ESGsender1/: CMakeLists.txt  filereciever.cpp  filereciever.h  filesend.cpp  main.qml  serialgraphic.h
GenerateContratQWidget/: lay.h  layer.cpp  mainwindow.cpp  widbox.cpp  widbox.ui  widget.cpp  widget.ui
GitFiles/Testing/: CMakeLists.txt
Memorial/: CMakeLists.txt  addimages.cpp  addimages.h  images.cpp  images.h  main.cpp
Memoring/: CMakeLists.txt  main.qml  prueba.cpp
MultiPlatformThreadSystemUnit/: graphic.cpp  systeminfolinux.h  systeminfowindows.h  thread.cpp  thread.h
OpenGL/: graphicgl.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
PaintFile1/: CMakeLists.txt  filemanaging.cpp  filemanaging.h  main.cpp  main.qml  qml.qrc
PaintFile2/: CMakeLists.txt  main.qml
SelectColor1/: CMakeLists.txt
SerialSender/: Boton.qml  main.cpp  serialsender.cpp  serialsender.h
TennisWithBackEndToBeDone/: CMakeLists.txt  Raquet.qml  main.qml  qml.qrc
Testing/: TestQString.cpp
Threads/: mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.h
calendario/: calendario.pro  (+6 more)
(+3963 files in other folders)
